--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo1"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
+
             android:name=".Splash_screen"
             android:label="@string/app_name" >
             <intent-filter>
