--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".Login" android:noHistory="true"/>
         <activity android:name=".Home"/>
         <activity android:name=".StatusViewer" />
+        <activity android:name=".Status_details"/>
     </application>
 
 </manifest>
