--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" android:noHistory="true"/>
+        <activity android:name=".Login"/>
         <activity android:name=".Home"/>
         <activity android:name=".StatusViewer" />
         <activity android:name=".Status_details"/>
