--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".StatusViewer" />
         <activity android:name=".Status_details"/>
         <activity android:name=".ComplaintImage"/>
+        <activity android:name=".App_introduction"/>
     </application>
 
 </manifest>
