--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
+
+    <!-- Permissions needed to receive sms -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
+
+    <!-- Permissions needed to read sms inbox -->
+    <uses-permission android:name="android.permission.READ_SMS" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:theme="@style/AppTheme" >
 
         <activity
-
+            android:screenOrientation="portrait"
             android:name=".Splash_screen"
             android:label="@string/app_name" >
             <intent-filter>
@@ -24,12 +33,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login"/>
-        <activity android:name=".Home"/>
-        <activity android:name=".StatusViewer" />
-        <activity android:name=".Status_details"/>
-        <activity android:name=".ComplaintImage"/>
-        <activity android:name=".App_introduction"/>
+
+        <activity android:name=".App_intro"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".Login"
+            android:screenOrientation="portrait"/>
+
+        <receiver android:name=".SMSReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
+
+    <activity android:name=".Home"
+        android:screenOrientation="portrait"/>
+
+        <activity android:name=".StatusViewer"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".Status_details"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ComplaintImage"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
